# fireplace_api

./: Cargo.toml  DEPLOYMENT.md  GPIO_FIX.md  HOMEKIT.md  README.md  RPI_SETUP.md  deploy.sh
config/: family_room.toml  master_bedroom.toml
src/: config.rs  error.rs  gpio.rs  gpio_shell.rs  hap_server.rs  main.rs  state.rs
src/api/: handlers.rs  mod.rs  models.rs
